修复全局注册中心在处理不同来源数据时无做一致性处理，导致合约数据在某种情况下没有实现过滤的问题